--- a/AvengersDKPTool/AvengersDKPTool/AddCharWindow.xaml
+++ b/AvengersDKPTool/AvengersDKPTool/AddCharWindow.xaml
@@ -7,10 +7,16 @@
         mc:Ignorable="d"
         Title="AddCharWindow" Height="150" Width="300">
     <Grid>
-        <ComboBox x:Name="MainCharSelect" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top" Width="176"/>
+        <Label x:Name="CharnameLabel" Content="Label" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Width="104"/>
+        <ComboBox x:Name="MainCharSelect" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top" Width="176" >
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <Button x:Name="AddAsMainBtn" Content="Add as Main" HorizontalAlignment="Left" Margin="177,37,0,0" VerticalAlignment="Top" Width="113" Click="AddAsMainBtn_Click"/>
         <Button x:Name="AddAltBtn" Content="Add as Alt" HorizontalAlignment="Left" Margin="207,77,0,0" VerticalAlignment="Top" Click="AddAltBtn_Click"/>
-        <Label x:Name="CharnameLabel" Content="Label" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Width="104"/>
 
     </Grid>
 </Window>
