--- a/AvengersDKPTool/AvengersDKPTool/MainWindow.xaml
+++ b/AvengersDKPTool/AvengersDKPTool/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Label Content="Everquest Folder Path:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="132"/>
         <TextBox x:Name="GamePathBox" HorizontalAlignment="Left" Margin="142,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="374" IsEnabled="False" TextChanged="GamePathBox_TextChanged"/>
         <Button x:Name="GamePathBrowse" Content="Browse" HorizontalAlignment="Left" Margin="521,12,0,0" VerticalAlignment="Top" Click="GamePathBrowse_Click"/>
-        <TabControl Margin="0,41,0,0">
+        <TabControl Margin="0,61,0,0">
             <TabItem x:Name="AttendanceTab" Header="Attendance" IsSelected="True">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
@@ -18,8 +18,40 @@
                         <ColumnDefinition Width="765*"/>
                     </Grid.ColumnDefinitions>
                     <Label Content="Dump files" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="118"/>
-                    <ListBox x:Name="DumpFilesList" Margin="10,41,569,0" Grid.ColumnSpan="2" SelectionChanged="DumpFilesList_SelectionChanged" />
-                    <ListBox x:Name="AttendeeGrid" Grid.Column="1" Margin="267,41,0,0"/>
+                    <ListBox x:Name="DumpFilesList" Margin="10,41,495,0" Grid.ColumnSpan="2" SelectionChanged="DumpFilesList_SelectionChanged" >
+                        <ListBox.ItemTemplate>
+
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Date, ConverterCulture=sv-SE}" >
+
+                                </TextBlock>
+                            </DataTemplate>
+
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <ListBox x:Name="AttendeeGrid" Grid.Column="1" Margin="346,41,190,0">
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem">
+                                <Setter Property="Background" Value="White"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Id}" Value="0" >
+                                        <Setter Property="Background" Value="Red"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+                        <ListBox.ItemTemplate>
+
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" >
+
+                                </TextBlock>
+                            </DataTemplate>
+
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <Button x:Name="UploadLogBtn" Content="Upload Log" HorizontalAlignment="Left" Margin="601,72,0,0" VerticalAlignment="Top" Grid.Column="1" Click="UploadLogBtn_Click"/>
+                    <TextBox x:Name="RaidLogNote" Grid.Column="1" HorizontalAlignment="Left" Margin="601,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="LootTab" Header="Loot">
@@ -36,16 +68,30 @@
                         <ColumnDefinition Width="29*"/>
                         <ColumnDefinition Width="765*"/>
                     </Grid.ColumnDefinitions>
-                    <ListBox x:Name="MainsList" Grid.Column="1" Margin="0,29,540,0"/>
-                    <ListBox x:Name="AltsList" Grid.Column="1" Margin="302,29,234,0"/>
-                    <Button x:Name="MainToAltBtn" Content="⇛" Grid.Column="1" HorizontalAlignment="Left" Margin="254,114,0,0" VerticalAlignment="Top" Width="20" FontSize="20"/>
-                    <Button x:Name="AltToMainBtn" Content="⇚" Grid.Column="1" HorizontalAlignment="Left" Margin="254,183,0,0" VerticalAlignment="Top" FontSize="20"/>
+                    <ListBox x:Name="MainsList" Grid.Column="1" Margin="0,29,626,0" SelectionChanged="MainsList_SelectionChanged" >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <ListBox x:Name="AltsList" Grid.Column="1" Margin="171,29,455,0">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                     <Label Content="Mains" Grid.Column="1" HorizontalAlignment="Left" Margin="0,3,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Alts/Other" Grid.Column="1" HorizontalAlignment="Left" Margin="302,3,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Alts/Other" Grid.Column="1" HorizontalAlignment="Left" Margin="208,3,0,0" VerticalAlignment="Top"/>
 
                 </Grid>
             </TabItem>
         </TabControl>
+        <Label Content="Api User Token" HorizontalAlignment="Left" Margin="48,35,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="ApiToken" HorizontalAlignment="Left" Margin="142,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="452" TextChanged="ApiToken_TextChanged"/>
+        <Image x:Name="ApiKeyValid" HorizontalAlignment="Left" Height="23" Margin="599,38,0,0" VerticalAlignment="Top" Width="22" Source="check.png" IsEnabled="False" Visibility="Hidden"/>
+        <Image x:Name="ApiKeyInvalid" HorizontalAlignment="Left" Height="23" Margin="599,38,0,0" VerticalAlignment="Top" Width="22" Source="cross.png" IsEnabled="False" Visibility="Hidden"/>
 
     </Grid>
 </Window>
